--- a/memoire/assets/css/utility.css
+++ b/memoire/assets/css/utility.css
@@ -7,10 +7,73 @@
     cursor: pointer;
 }
 
-.underline{
+.underline {
     text-decoration: underline !important;
 }
 
-.no-indent{
+.no-indent {
     text-indent: 0 !important;
+}
+
+.uppercase {
+    text-transform: uppercase !important;
+}
+
+.hidden {
+    display: none;
+}
+
+.op50 {
+    opacity: 0.5 !important;
+}
+
+textarea {
+    border: none;
+    overflow: auto;
+    outline: none;
+
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+
+    resize: none;
+}
+
+
+
+#tooltip {
+    position: absolute;
+    display: none;
+    z-index: 99;
+    background-color: var(--color-borders-light);
+    border-radius: 999px;
+    font-size: 10px;
+    line-height: 2;
+    padding: 0 5px;
+    border: 1px solid var(--color-borders);
+    margin-top: 5px;
+}
+
+#tooltip:hover {
+    cursor: pointer;
+}
+
+#cal1 {
+    position: absolute;
+    height: 0px;
+    width: 0px;
+    top: 100px;
+    left: 100px;
+    overflow: none;
+    z-index: -100;
+}
+
+#cal2 {
+    position: absolute;
+    height: 0px;
+    width: 0px;
+    top: 0px;
+    left: 0px;
+    overflow: none;
+    z-index: -100;
 }
