--- a/memoire/assets/css/options.css
+++ b/memoire/assets/css/options.css
@@ -95,7 +95,7 @@
     font-family: Commonsans, sans-serif;
     font-weight: 400;
     padding-top: var(--space-l);
-
+    text-transform: uppercase;
     font-family: var(--ff-text);
 
 
@@ -219,14 +219,15 @@
     border-radius: 10px;
     margin: var(--space-m) 0;
     padding: var(--space-s);
-    border:  1px solid var(--color-borders);
+    border: 1px solid var(--color-borders);
 
 }
 
-/* .sommairePage div:hover {
-    border: 1px solid black;
+.sommairePage div:hover {
     cursor: pointer;
-} */
+    background-color: var(--color-borders);
+    border: 1px solid var(--color-borders);
+}
 
 .sommairePage a {
     text-decoration: none !important;
@@ -280,14 +281,14 @@
     padding: 5px 0 var(--space-s) 0;
     position: absolute;
     bottom: 0;
-    font-size: 12px;
+    font-size: var(--fs-small);
     margin: 0 !important;
     background-color: var(--color-borders-light);
     border-radius: 0 !important;
-    border-width: 1px 0 0 0 !important;
-    border: 1px dashed var(--color-borders);
+    /* border-width: 1px 0 0 0 !important;
+    border: 1px dashed var(--color-borders); */
     line-height: 1.5;
-    width: calc(100% - var(--space-l)*2 - 30px);
+    width: calc(100% - var(--space-m)*2 - 30px);
     box-sizing: border-box;
 }
 
@@ -299,6 +300,23 @@
 .footer p {
     margin: 0;
     text-indent: 0;
+    text-align: center;
+    background-color: var(--color-borders);
+    color: black;
+    padding: var(--space-s);
+    border-radius: 10px;
+    text-transform: uppercase;
+    border: 1px solid transparent;
+}
+
+.footer p:hover{
+    background-color: var(--color-borders-light);
+    cursor: pointer;
+    border: 1px solid var(--color-borders);
+}
+
+.footer a, .footer a:hover {
+    text-decoration: none;
 }
 
 
@@ -309,8 +327,7 @@
 
 .notesPage {
     width: inherit;
-    height: calc(100% - var(--space-m)*2);
-    z-index: 5;
+    height: calc(100% - 60px);
     padding: var(--space-m) var(--space-m) 0 var(--space-m);
     box-sizing: border-box;
     z-index: 5;
@@ -338,10 +355,13 @@
 }
 
 .notesPage>p {
-    font-size: 12px;
-    margin: var(--space-s) 0 0 0 !important;
-    line-height: 1.5;
+    font-size: var(--fs-small);
+    margin: var(--space-s) var(--space-s) 0 var(--space-s) !important;
+    line-height: var(--lh-small);
     text-indent: 0;
+
+
+    border-radius: 10px;
 }
 
 
@@ -360,6 +380,8 @@
     margin: var(--space-m) 0;
     background-color: var(--color-white-semi);
     padding: 5px var(--space-s);
+    font-size: var(--fs-middle);
+line-height: var(--lh-middle);
 }
 
 .notesCopy span {
