--- a/memoire/assets/css/style.css
+++ b/memoire/assets/css/style.css
@@ -153,7 +153,7 @@ h3 {
     line-height: var(--lh-middle);
 
     margin: 0;
-    padding: var(--space-s) 0;
+    padding: var(--space-m) 0;
     z-index: 99;
 
     text-transform: uppercase;
@@ -216,22 +216,28 @@ section {
 .titlesSticky {
     display: none;
     position: sticky;
-    top: var(--space-m);
+    top: 0;
     z-index: 999;
+    background-color: white;
+    padding: var(--space-m) 0;
+    background: rgb(255,255,255);
+    background: linear-gradient(180deg, rgb(255, 255, 255) 85%, rgba(255,255,255,0) 100%);
 }
 
 .titlesSticky h1{
-    font-size: var(--fs-normal);
-    padding: var(--space-m);
-    background-color: black;
-    color: white;
     line-height: var(--lh-normal);
+    margin-bottom: 0;
+    border: none;
+    font-size: var(--fs-normal);
+    padding: 0;
+    text-align: left;
 }
 
 .titlesSticky h2{
-    display: none;
     font-size: var(--fs-small);
     padding: 0;
+    text-align: left;
+    line-height: var(--lh-normal);
 }
 
 /******************* SOMMAIRE PARTIES *******************/
