--- a/memoire/assets/css copy/utility.css
+++ b/memoire/assets/css copy/utility.css
@@ -33,6 +33,7 @@ textarea {
     outline: none;
 
     -webkit-box-shadow: none;
+    -moz-box-shadow: none;
     box-shadow: none;
 
     resize: none;
