--- a/memoire/assets/css/parties.css
+++ b/memoire/assets/css/parties.css
@@ -5,102 +5,79 @@
 
 
 .book-3-4 {
-    width: calc(100vw - 40px - 20px * 3) !important;
-    margin-left: 40px !important;
+    width: calc(100% - 45px - 80px)  !important;
+    margin-left: 45px !important;
 }
 
 .book-2-4 {
-    width: calc(100vw - 50px - 20px * 2) !important;
-    margin-left: 50px !important;
-}
-
-.book-1-4 {
-    width: calc(100vw - 60px - 20px * 1) !important;
+    width: calc(100% - 60px - 50px) !important;
     margin-left: 60px !important;
 }
 
+.book-1-4 {
+    width: calc(100% - 75px - 30px) !important;
+    margin-left: 75px !important;
+}
+
 .book-Full {
-    width: calc(100vw - 70px) !important;
-    margin-left: 70px !important;
+    width: calc(100% - 90px - 0px) !important;
+    margin-left: 90px !important;
 }
 
 
 .reduireBook-3-4 {
-    width: calc(100vw - 30px - 25px * 4) !important;
-    -webkit-transition: var(--trans-quick);
-    -o-transition: var(--trans-quick);
+    width: calc(100% - 40px - 110px) !important;
     transition: var(--trans-quick);
 }
 
 .reduireBook-2-4 {
-    width: calc(100vw - 40px - 25px * 3) !important;
-    -webkit-transition: var(--trans-quick);
-    -o-transition: var(--trans-quick);
+    width: calc(100% - 60px - 75px) !important;
     transition: var(--trans-quick);
 }
 
 .reduireBook-1-4 {
-    width: calc(100vw - 50px - 25px * 2) !important;
-    -webkit-transition: var(--trans-quick);
-    -o-transition: var(--trans-quick);
+    width: calc(100% - 120px) !important;
     transition: var(--trans-quick);
 }
 
 .reduireBook-Full {
-    width: calc(100vw - 60px - 25px * 1) !important;
-    -webkit-transition: var(--trans-quick);
-    -o-transition: var(--trans-quick);
+    width: calc(100% - 70px - 0px)!important;
     transition: var(--trans-quick);
 }
 
 
 .transformLeft {
-    -webkit-transform: translateX(-15px) !important;
-        -ms-transform: translateX(-15px) !important;
-            transform: translateX(-15px) !important;
-    -webkit-transition: var(--trans-quick);
-    -o-transition: var(--trans-quick);
+    transform: translateX(-15px) !important;
     transition: var(--trans-quick);
 }
 
 .transformRight {
-    -webkit-transform: translateX(5px) !important;
-        -ms-transform: translateX(5px) !important;
-            transform: translateX(5px) !important;
-    -webkit-transition: var(--trans-quick);
-    -o-transition: var(--trans-quick);
+    transform: translateX(5px) !important;
+    transition: var(--trans-quick);
+}
+
+.ampliarBook-Full {
+    width: calc(100% - 95px - 0px)!important;
+    margin-left: 95px !important;
     transition: var(--trans-quick);
 }
 
 .ampliarBook-1-4 {
-    width: calc(100vw - 65px - 20px *1) !important;
-    margin-left: 65px !important;
-    -webkit-transition: var(--trans-quick);
-    -o-transition: var(--trans-quick);
+    width: calc(100% - 80px - 30px) !important;
+    margin-left: 80px !important;
     transition: var(--trans-quick);
 }
 
 .ampliarBook-2-4 {
-    width: calc(100vw - 55px - 20px * 2) !important;
-    margin-left: 55px !important;
-    -webkit-transition: var(--trans-quick);
-    -o-transition: var(--trans-quick);
+    width: calc(100% - 65px - 50px) !important;
+    margin-left: 65px !important;
     transition: var(--trans-quick);
 }
 
 .ampliarBook-3-4 {
-    width: calc(100vw - 45px - 20px * 3) !important;
-    margin-left: 45px !important;
-    -webkit-transition: var(--trans-quick);
-    -o-transition: var(--trans-quick);
+    width: calc(100% - 50px - 80px) !important;
+    margin-left: 50px !important;
     transition: var(--trans-quick);
 }
 
 
-.ampliarBook-Full {
-    width: calc(100vw - 75px) !important;
-    margin-left: 75px !important;
-    -webkit-transition: var(--trans-quick);
-    -o-transition: var(--trans-quick);
-    transition: var(--trans-quick);
-}
