--- a/memoire/assets/css/options.css
+++ b/memoire/assets/css/options.css
@@ -1,486 +1,391 @@
 /******************* BOOKMARKS *******************/
 
 #bookmarkPartieI {
-    right: 60px;
-    z-index: 3;
-}
-
-#bookmarkPartieIOff {
-    left: 30px;
-    z-index: 3;
-    display: none;
+  right: 75px;
+  z-index: 3;
 }
 
 #bookmarkPartieII {
-    right: 40px;
-    z-index: 2;
-}
-
-#bookmarkPartieIIOff {
-    left: 40px;
-    z-index: 4;
-    display: none;
+  right: 50px;
+  z-index: 2;
 }
 
 #bookmarkPartieIII {
-    right: 20px;
-    z-index: 1;
-}
-
-#bookmarkPartieIIIOff {
-    left: 50px;
-    z-index: 5;
-    display: none;
+  right: 25px;
+  z-index: 1;
 }
 
 #bookmarkPartieFin {
-    right: 0;
-    z-index: 0;
+  right: 0;
+  z-index: 0;
+
+}
+
+
+
+#bookmarkPartieIOff {
+  left: 0px;
+  z-index: 3;
+  display: none;
+}
+
+
+#bookmarkPartieIIOff {
+  left: 15px;
+  z-index: 4;
+  display: none;
+}
+
+
+#bookmarkPartieIIIOff {
+  left: 30px;
+  z-index: 5;
+  display: none;
 }
 
 #bookmarkPartieFinOff {
-    left: 60px;
-    z-index: 6;
-    display: none;
+  left: 45px;
+  z-index: 6;
+  display: none;
 }
 
-
-.bookmark {
-    font-weight: 400;
-    width: 100px;
-    -webkit-writing-mode: sideways-rl;
-        -ms-writing-mode: sideways-rl;
-            writing-mode: sideways-rl;
-    font-size: var(--fs-middle);
-    height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    -webkit-box-shadow: 0 0 10px 0 #000;
-            box-shadow: 0 0 10px 0 #000;
-
-    height: 100%;
-    position: fixed;
-    display: flex;
-    margin: 0;
-    background-color: white;
-    top: 0;
-
-    padding-top: var(--space-m);
-    padding-right: 8px;
-    text-transform: uppercase;
-    z-index: 0;
-
-    -webkit-transition: var(--trans-quick);
-
-    -o-transition: var(--trans-quick);
-
-    transition: var(--trans-quick);
-
-    font-family: var(--ff-titles);
+.bookmarks {
+  width: 120px;
+  position: absolute;
+  margin: 0;
+  top: 0;
+  right: 0;
+  display: flex;
+  height: 100%;
 }
 
-.bookmark:hover {
-    /* color: rgb(137, 137, 137);
+.bookmarks div {
+  font-weight: 400;
+  width: 50px;
+  writing-mode: sideways-rl;
+  font-size: var(--fs-middle);
+  height: 100vh;
+  box-sizing: border-box;
+  box-shadow: 0 0 10px 0 var(--color-shadow);
+  padding-top: 12px;
+  padding-right: 8px;
+  text-transform: uppercase;
+  transition: var(--trans-quick);
+  font-family: var(--ff-titles);
+  position: absolute;
+  background-color: var(--color-white);
+  height: 100%;
+}
+
+.bookmarks div:nth-last-child(1){
+  border-radius: 0 15px 15px 0;
+}
+
+.bookmarks div:hover {
+  /* color: rgb(137, 137, 137);
     background-color: red; */
 }
 
-.bookmarks span {
-    -webkit-writing-mode: tb;
-        -ms-writing-mode: tb;
-            writing-mode: tb;
-    font-size: var(--fs-big);
-    margin-bottom: 5px;
-    height: var(--fs-big) !important;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+.bookmarksOff {
+  position: absolute;
+  top: 0;
+  left: 30px;
+  background-color: var(--color-white);
+  width: 50px;
+  height: 100%;
 }
 
+.bookmarksOff div {
+  position: absolute;
+  height: 100%;
+  width: 30px;
+  background-color: var(--color-white);
+  box-shadow: 0 0 10px 0 var(--color-shadow);
+}
+
+
+.bookmarks>div>span {
+  position: sticky;
+  top: 12px;
+  display: flex;
+}
+
+
+.bookmarks>div>span>span {
+  writing-mode: tb;
+  font-size: var(--fs-big);
+  margin-bottom: 5px;
+  height: var(--fs-big) !important;
+  display: flex;
+  justify-content: center;
+  font-family: var(--ff-text);
+}
 
 /******************* LEFT SIDE *******************/
 
 .panel h2 {
-    padding: 0 !important;
-    margin: 0;
-    font-family: Commonsans, sans-serif;
-    font-weight: 400;
-    padding-top: var(--space-l);
-    text-transform: uppercase;
-    font-family: var(--ff-text);
-
-
+  padding: 0 !important;
+  margin: 0;
+  font-family: Commonsans, sans-serif;
+  font-weight: 400;
+  padding-top: var(--space-l);
+  text-transform: uppercase;
+  font-family: var(--ff-text);
 }
 
 .panel {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    height: 100vh;
-    width: 450px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-
-    -webkit-transform: translateX(calc(-100% + 30px));
-
-        -ms-transform: translateX(calc(-100% + 30px));
-
-            transform: translateX(calc(-100% + 30px));
-    -webkit-transition: var(--trans-quick);
-    -o-transition: var(--trans-quick);
-    transition: var(--trans-quick);
+  position: sticky;
+  top: var(--space-xl);
+  left: 0;
+  z-index: 0;
+  height: 100vh;
+  width: calc(100% + var(--space-xl) * 2);
+  display: none;
+  transition: var(--trans-quick);
+  z-index: 990;
+  transform: translate(calc(var(--space-xl) * -1), calc(var(--space-xl) * -1));
 }
 
 .displayed {
-    -webkit-transform: translateX(calc(0px));
-        -ms-transform: translateX(calc(0px));
-            transform: translateX(calc(0px));
-    -webkit-transition: var(--trans-quick);
-    -o-transition: var(--trans-quick);
-    transition: var(--trans-quick);
-    z-index: 999;
+  display: flex;
+  transition: var(--trans-quick);
+  z-index: 999;
 }
 
-.panel>.header {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    height: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+.header {
+  display: flex;
+  justify-content: space-between;
+  width: fit-content;
+  height: 100%;
+  flex-direction: column;
+  position: fixed;
+  border-radius: 15px 0 0 15px;
+  
 }
 
-.panel>.header div {
-    width: 30px;
-    height: calc(100% / 3);
-    font-weight: 400;
-    font-size: 16px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    padding: var(--space-s) 0;
-    background-color: white;
-    -webkit-writing-mode: sideways-lr;
-        -ms-writing-mode: sideways-lr;
-            writing-mode: sideways-lr;
-    border-radius: 0 10px 10px 0;
-    -webkit-box-shadow: -5px 0 20px 0 #000;
-            box-shadow: -5px 0 20px 0 #000;
-    font-family: var(--ff-text);
+.header div {
+  width: 30px;
+  height: calc(100% / 3);
+  font-weight: 400;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding: var(--space-s) 0;
+  background-color: var(--color-white);
+  writing-mode: sideways-lr;
+  box-shadow: -5px 0 20px 0 var(--color-shadow);
+  font-family: var(--ff-text);
 }
 
-.panel>.header div:hover {
-    background-color: var(--color-borders-light);
+.header div:nth-child(1){
+  border-radius: 15px 0 0 0px;
 }
 
-.panel .content div {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    overflow-y: scroll !important;
+
+.header div:nth-child(3){
+  border-radius: 0px 0 0 15px;
 }
 
-.panel .content div::-webkit-scrollbar {
-    display: none;
+.header div:hover {
+  background-color: var(--color-highlight);
 }
 
-.panel>.content {
-    width: 100%;
-    z-index: 999;
-    background-color: var(--color-borders-light);
-    -webkit-box-shadow: -5px 0 20px 0 #000;
-            box-shadow: -5px 0 20px 0 #000;
+.panel>div {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  overflow-y: scroll !important;
+  width: inherit;
+  height: 100%;
+  padding: var(--space-m);
+  box-sizing: border-box;
+  z-index: 5;
+  background-color: var(--color-secondary);
+  display: none;
+}
+
+.panel>div::-webkit-scrollbar {
+  display: none;
 }
 
 .sommaireButtonOn {
-    z-index: 999 !important;
-    -webkit-box-shadow: none !important;
-            box-shadow: none !important;
-    background-color: var(--color-borders-light) !important;
-    -webkit-box-pack: center !important;
-        -ms-flex-pack: center !important;
-            justify-content: center !important;
-    -webkit-writing-mode: inherit !important;
-        -ms-writing-mode: inherit !important;
-            writing-mode: inherit !important;
-    padding: 0 !important;
+  z-index: 999 !important;
+  box-shadow: none !important;
+  background-color: var(--color-secondary-light) !important;
+  color: var(--color-white) !important;
+  justify-content: center !important;
+  /* writing-mode: inherit !important; */
+  padding: 0 !important;
 }
 
-
 .sommaireButtonOn:hover span {
-    width: 100% !important;
-    height: calc(100%) !important;
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
-    -webkit-box-align: center !important;
-        -ms-flex-align: center !important;
-            align-items: center !important;
-    -webkit-box-sizing: border-box !important;
-            box-sizing: border-box !important;
-    border-radius: 0 6px 6px 0 !important;
-    background-color: var(--color-white-semi) !important;
-    -webkit-box-pack: center !important;
-        -ms-flex-pack: center !important;
-            justify-content: center !important;
+  width: 100% !important;
+  height: calc(100%) !important;
+  display: flex !important;
+  align-items: center !important;
+  box-sizing: border-box !important;
+  background-color: var(--color-secondary) !important;
+  color: var(--color-black) !important;
+  justify-content: center !important;
 }
 
 /******************* SOMMAIRE *******************/
 
-.sommairePage {
-    width: inherit;
-    height: 100%;
-    z-index: 5;
-    padding: var(--space-m);
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    display: none;
-    overflow: hidden;
-    background-color: var(--color-borders-light);
-}
-
 .sommairePage h3 {
-    margin: var(--space-l) 0 0 0;
-    font-weight: 400;
+  margin: var(--space-l) 0 0 0;
+  font-weight: 400;
 }
 
 .sommairePage h4 {
-    margin: 0 0 2px 0;
-    font-family: var(--ff-titles);
-    font-size: var(--fs-middle);
-    line-height: var(--lh-middle);
+  margin: 0 0 2px 0;
+  font-family: var(--ff-titles);
+  font-size: var(--fs-middle);
+  line-height: var(--lh-middle);
 }
 
 .sommairePage h4 span {
-    font-size: var(--fs-normal);
+  font-size: var(--fs-normal);
 }
 
 .sommairePage div {
-    border-radius: 10px;
-    margin: var(--space-m) 0;
-    padding: var(--space-s);
-    border: 1px solid var(--color-borders);
-
+  border-radius: 10px;
+  margin: var(--space-m) 0;
+  padding: var(--space-s);
+  border: 1px solid var(--color-secondary-light);
 }
 
 .sommairePage div:hover {
-    cursor: pointer;
-    background-color: var(--color-borders);
-    border: 1px solid var(--color-borders);
+  cursor: pointer;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-secondary);
 }
 
 .sommairePage a {
-    text-decoration: none !important;
+  text-decoration: none !important;
 }
 
 .sommairePage a:hover {
-    text-decoration: underline !important;
+  text-decoration: underline !important;
 }
 
 .indexSelected {
-    background-color: var(--color-white) !important;
+  background-color: var(--color-white) !important;
 }
 
 .sommairePage ul {
-    margin: 0 0 var(--space-s) 7px;
+  margin: 0 0 var(--space-s) 7px;
 }
 
 .sommairePage ul {
-    list-style: none;
+  list-style: none;
 }
 
 .sommairePage ul li::before {
-    content: "・ ";
+  content: "・ ";
 }
 
 .sommairePage details>summary {
-    list-style-type: '→ ';
+  list-style-type: "→ ";
+  margin-left: var(--space-l);
+  width: fit-content;
 }
 
 .sommairePage details[open]>summary {
-    list-style-type: '⤵ ';
+  list-style-type: "⤵ ";
 }
 
 ::marker:hover {
-    opacity: .5 !important;
-}
-
-
-
-
-.sommairePage summary {
-    margin-left: var(--space-l)
+  opacity: 0.5 !important;
 }
 
 .sommairePage details {
-    font-size: var(--fs-middle);
-    line-height: var(--lh-normal);
+  font-size: var(--fs-middle);
+  line-height: var(--lh-normal);
 }
-
-.footer {
-    padding: 5px 0 var(--space-s) 0;
-    position: absolute;
-    bottom: 0;
-    font-size: var(--fs-small);
-    margin: 0 !important;
-    background-color: var(--color-borders-light);
-    border-radius: 0 !important;
-    /* border-width: 1px 0 0 0 !important;
-    border: 1px dashed var(--color-borders); */
-    line-height: 1.5;
-    width: calc(100% - var(--space-m)*2 - 30px);
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-}
-
-.footer img {
-    height: 15px;
-    margin-left: 2px;
-}
-
-.footer p {
-    margin: 0;
-    text-indent: 0;
-    text-align: center;
-    background-color: var(--color-borders);
-    color: black;
-    padding: var(--space-s);
-    border-radius: 10px;
-    text-transform: uppercase;
-    border: 1px solid transparent;
-}
-
-.footer p:hover{
-    background-color: var(--color-borders-light);
-    cursor: pointer;
-    border: 1px solid var(--color-borders);
-}
-
-.footer a, .footer a:hover {
-    text-decoration: none;
-}
-
-
 
 /******************* NOTE PAGE *******************/
 
-
-
-.notesPage {
-    width: inherit;
-    height: calc(100% - 60px);
-    padding: var(--space-m) var(--space-m) 0 var(--space-m);
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    z-index: 5;
-    background-color: var(--color-borders-light);
-    display: none;
-    margin-bottom: calc(var(--space-m)*3) !important;
-    box-sizing: border-box;
-
-}
-
-
 .notesPage::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 .notesPage::-webkit-scrollbar-track {
-    border-radius: 8px;
-    background-color: #e7e7e7;
-    border: 1px solid #cacaca;
+  border-radius: 8px;
+  background-color: #e7e7e7;
+  border: 1px solid #cacaca;
 }
 
 .notesPage::-webkit-scrollbar-thumb {
-    border-radius: 8px;
-    background-color: #d55959;
+  border-radius: 8px;
+  background-color: #d55959;
 }
 
 .notesPage>p {
-    font-size: var(--fs-small);
-    margin: var(--space-s) var(--space-s) 0 var(--space-s) !important;
-    line-height: var(--lh-small);
-    text-indent: 0;
+  font-size: var(--fs-small);
+  margin: var(--space-s) var(--space-s) 0 var(--space-s) !important;
+  line-height: var(--lh-small);
+  text-indent: 0;
 
-
-    border-radius: 10px;
+  border-radius: 10px;
 }
-
-
 
 .littleNote {
-    position: absolute;
-    width: calc(50% - var(--space-xl)*2);
-    font-size: 12px;
-    color: var(--color-notes);
-    text-align: right;
+  position: absolute;
+  width: calc(50% - var(--space-xl) * 1);
+  font-size: 12px;
+  color: var(--color-notes);
+  text-align: right;
+  padding: 0 15px;
+  box-sizing: border-box;
+  z-index: 999;
 }
-
 
 .notesCopy {
-    border-radius: 10px;
-    margin: var(--space-m) 0;
-    background-color: var(--color-white-semi);
-    padding: 5px var(--space-s);
-    font-size: var(--fs-middle);
-line-height: var(--lh-middle);
+  border-radius: 10px;
+  margin: var(--space-m) 0;
+  border: 1px solid var(--color-secondary-light);
+  padding: 5px var(--space-s);
+  font-size: var(--fs-middle);
+  line-height: var(--lh-middle);
 }
 
-.notesCopy span {
-    font-size: 12px;
-    color: var(--color-notes);
-    display: block;
+.notesCopyHeader {
+  font-size: var(--fs-middle);
+  color: var(--color-notes);
+  display: flex;
+  justify-content: space-between;
+  padding: var(--space-s);
 }
 
 .notesCopy p {
-    padding: var(--space-s);
-    text-indent: 0 !important;
-    margin: 0 !important;
-    border-radius: 10px;
+  padding: var(--space-s);
+  text-indent: 0 !important;
+  margin: 0 !important;
+  border-radius: 10px;
 }
 
 .notesCopy:last-child {
-    margin-bottom: 0 !important;
+  margin-bottom: 0 !important;
 }
 
-
 .notesCopy textarea {
-    border: none;
-    font-size: 16px;
-    width: 100%;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    resize: none;
-    /* min-width: 150px; */
-    min-height: 20px !important;
+  border: none;
+  font-size: 16px;
+  width: 100%;
+  box-sizing: border-box;
+  resize: none;
+  /* min-width: 150px; */
+  min-height: 20px !important;
 
-    background-color: transparent;
-    padding: var(--space-s) var(--space-s) 0 var(--space-s);
+  background-color: transparent;
+  color: var(--color-black);
+  padding: var(--space-s) var(--space-s) 0 var(--space-s);
 }
 
 .notesCopySelection {
-    background-color: aliceblue !important;
+  background-color: var(--color-white);
+  color: var(--color-black);
 }
-
 
 /* TEXTAREA AUTO RESIZE STYLES BEGIN */
 
@@ -495,63 +400,46 @@ line-height: var(--lh-middle);
 /* the styles for 'txta' are applied to both the textarea and the hidden clone */
 /* these must be the same for both */
 .txta {
-    width: 100%;
-    max-width: 500px;
-    font-family: var(--ff-text);
-    font-size: var(--fs-middle);
-    line-height: var(--lh-middle);
-    overflow: hidden;
-    padding: var(--space-s);
-
+  width: 100%;
+  max-width: 500px;
+  font-family: var(--ff-text);
+  font-size: var(--fs-middle);
+  line-height: var(--lh-middle);
+  overflow: hidden;
+  padding: var(--space-s);
 }
 
 /* TEXTAREA AUTO RESIZE STYLES END */
 
-
-
-
 /******************* OPTIONS PAGE *******************/
 
 .options:hover {
-    background-color: white;
-    opacity: .6;
-    width: 50vw;
-    z-index: 1;
-    position: absolute;
-    height: 100%;
-    right: 0;
+  background-color: var(--color-white);
+  opacity: 0.6;
+  width: 50vw;
+  z-index: 1;
+  position: absolute;
+  height: 100%;
+  right: 0;
 }
 
 .closer {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 30px;
-    border-radius: 999px;
-    border: 1px solid var(--color-white-semi);
-    margin: var(--space-m);
-    text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  border-radius: 999px;
+  border: 1px solid var(--color-secondary);
+  margin: var(--space-m);
+  text-align: center;
 }
 
 .optionsPage>span:nth-child(1) {
-    background-color: var(--color-background);
-    color: var(--color-white-semi);
+  background-color: var(--color-background);
+  color: var(--color-secondary);
 }
 
 .notesPage>span:nth-child(1) {
-    background-color: var(--color-borders);
-    color: var(--color-white-semi);
-}
-
-
-.optionsPage {
-    width: inherit;
-    height: 100%;
-    z-index: 5;
-    padding: var(--space-m);
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    z-index: 5;
-    background-color: var(--color-borders-light);
-    display: none;
+  background-color: var(--color-secondary);
+  color: var(--color-secondary);
 }
