--- a/memoire/assets/css/style.css
+++ b/memoire/assets/css/style.css
@@ -8,9 +8,9 @@ html {
     text-rendering: optimizeLegibility;
     height: 100%;
     width: 100%;
+    scroll-behavior: smooth !important;
     overflow: scroll;
     overflow-x: hidden;
-    scroll-behavior: smooth;
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
@@ -19,25 +19,23 @@ html::-webkit-scrollbar {
     display: none;
 }
 
-::-moz-selection {
-    color: white;
-    background-color: black;
-}
-
 ::selection {
-    color: white;
-    background-color: black;
+    color: var(--color-white);
+    background-color: var(--color-black);
 }
 
 
 body {
     font-family: var(--ff-text);
-    background-color: white;
+    background-color: dodgerblue;
+    color: var(--color-black);
     margin: 0;
 
     font-size: var(--fs-normal);
     line-height: var(--lh-normal);
     font-weight: 400;
+
+    scroll-behavior: smooth;
 }
 
 a,
@@ -46,8 +44,7 @@ a:visited,
 a:hover {
     color: inherit;
     text-decoration: underline;
-    -webkit-text-decoration-style: dotted;
-            text-decoration-style: dotted;
+    text-decoration-style: dotted;
 }
 
 a:hover {
@@ -55,83 +52,68 @@ a:hover {
     cursor: pointer;
 }
 
+button a {
+    text-decoration: none !important;
+}
+
 button {
-    border-radius: var(--border-s);
-    border: 1px solid var(--color-white-semi);
-    background-color: var(--color-white-semi);
+    border-radius: var(--border-m);
+    border: 1px solid var(--color-secondary-light);
+    background-color: #e8e6e291;
     padding: var(--space-s);
+    transition: var(--trans-quick);
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: var(--color-white);
+    transition: var(--trans-quick);
 }
 
 /******************* BOOK EFFECT *******************/
-/* .bookeffect {
-    pointer-events: none;
-    position: fixed;
 
-    position: fixed;
-    z-index: 10;
-    display: flex;
-    width: 100vw;
-    height: 100vh;
+.tout {
+    max-width: 1300px;
+    margin: auto;
+    /* background-color: red; */
+    position: relative;
 }
-
-.foldleft {
-    width: 50%;
-    height: 100%;
-    box-shadow: 3px 0 26px 0 #000;
-}
-
-.foldright {
-    width: 50%;
-    height: 100%;
-    box-shadow: 0 0 44px 0 #2d2d2d;
-} */
 
 /******************* PAGES *******************/
 .book {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     margin-left: 30px;
-    width: calc(100vw - 30px - 20px * 4);
-    background-color: white;
+    width: calc(100% - 30px - 100px);
+    background-color: var(--color-white);
     z-index: 10;
     position: relative;
     min-height: 100vh;
-
-    -webkit-transition: var(--trans-quick);
-
-    -o-transition: var(--trans-quick);
 
     transition: var(--trans-quick);
 }
 
 .book>main {
     padding: var(--space-xl);
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
     height: inherit;
 }
 
 .bookFolded {
     pointer-events: none;
     position: fixed;
-    z-index: 998;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    z-index: 1000;
     display: flex;
     width: 50%;
     height: 100%;
 }
 
 .foldleft {
-    -webkit-box-shadow: 3px 0 26px 0 #000;
-            box-shadow: 3px 0 26px 0 #000;
+    box-shadow: 3px 0 26px 0 var(--color-shadow);
     position: absolute;
 }
 
 .foldright {
-    -webkit-box-shadow: 3px 0 26px 0 #000;
-            box-shadow: 3px 0 26px 0 #000;
+    box-shadow: 3px 0 26px 0 var(--color-shadow);
     position: absolute;
     right: 0;
 }
@@ -139,14 +121,14 @@ button {
 .bookLeft {
     width: 50%;
     height: 100%;
-    /* box-shadow: 0 0 30px 0 #000; */
+    /* box-shadow: 0 0 30px 0 var(--color-shadow); */
 }
 
 
 .bookRight {
     width: 50%;
     height: 100%;
-    /* box-shadow: 0 0 30px 0 #000; */
+    /* box-shadow: 0 0 30px 0 var(--color-shadow); */
     z-index: 10;
 }
 
@@ -170,9 +152,14 @@ h1 {
     font-weight: 400;
     text-align: center;
     /* box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.5); */
-    border: 1px solid black;
+    border: 1px solid var(--color-black);
     border-radius: 20px;
     padding: var(--space-s);
+
+    box-shadow: 0px 0 20px -10px var(--color-shadow);
+
+    word-break:break-all;
+
 }
 
 h2 {
@@ -196,7 +183,7 @@ h3 {
 
     text-transform: uppercase;
 
-    border: 1px dashed black;
+    border: 1px dashed var(--color-black);
     border-top-width: 1px;
     border-right-width: 1px;
     border-bottom-width: 1px;
@@ -204,10 +191,9 @@ h3 {
     border-width: 1px 0 1px 0;
     margin-top: var(--space-xl);
     text-align: center;
-    position: -webkit-sticky;
     position: sticky;
     top: -1px;
-    background-color: white;
+    background-color: var(--color-white);
 }
 
 h4 {
@@ -225,15 +211,9 @@ section {
 }
 
 .pagePartie {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    flex-direction: column;
+    justify-content: space-around;
     /* height: calc(100vh - var(--space-xl)*2); */
     padding-top: var(--space-xl);
     margin-top: calc(var(--space-xl) * -1);
@@ -246,37 +226,28 @@ section {
     text-transform: uppercase;
     margin: 0 auto var(--space-l) auto;
     text-align: center;
-    -webkit-box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.5);
-            box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.5);
     width: 50px;
     height: 50px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    align-items: center;
+    justify-content: center;
     border-radius: 100%;
-    background-color: black;
-    color: white;
+    background-color: var(--color-black);
+    color: var(--color-white);
     line-height: initial;
+    border: 1px solid black;
+    box-shadow: 0px 0 20px -10px var(--color-shadow);
 }
 
 .titlesSticky {
     display: none;
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
-    z-index: 999;
-    background-color: white;
+    z-index: 997;
+    background-color: var(--color-white);
     padding: var(--space-m) 0;
-    background: rgb(255, 255, 255);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(85%, rgb(255, 255, 255)), to(rgba(255, 255, 255, 0)));
-    background: -o-linear-gradient(top, rgb(255, 255, 255) 85%, rgba(255, 255, 255, 0) 100%);
-    background: linear-gradient(180deg, rgb(255, 255, 255) 85%, rgba(255, 255, 255, 0) 100%);
+    background: var(--color-white);
+    background: linear-gradient(180deg, var(--color-white) 85%, rgba(255, 255, 255, 0) 100%)
 }
 
 .titlesSticky h1 {
@@ -296,66 +267,151 @@ section {
 }
 
 /******************* SOMMAIRE PARTIES *******************/
-.titleAV {
-    height: calc(80vh - var(--space-xl)*2);
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    background-color: white;
-    color: black;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    aspect-ratio: 1/2;
-    padding: var(--space-l) !important;
-    -webkit-box-shadow: 0 0 20px 0 white;
-            box-shadow: 0 0 20px 0 white;
-    border-radius: 0 18px 18px 0;
-}
-
-.titleAV p {
-    text-align: center;
-}
-
-.supertitle {
-    text-align: center;
-    font-family: Commonsans, sans-serif;
-    font-size: 60px;
-    line-height: 1;
-    font-style: italic;
-}
-
-.avant-propos {
+.start {
     position: fixed;
     z-index: 999;
     width: 100vw;
-    background-color: black;
-    color: white;
+    background-color: dodgerblue;
     overflow-y: scroll;
     overflow-x: hidden;
-    padding: var(--space-xxl);
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
     height: 100vh;
-    /*! padding-top: calc(var(--space-xxl)*1); */
+    padding: 0 var(--space-xxl);
 
+    /* display: none; */
+}
+
+.avant-propos {
     display: none;
+}
+
+.supertitleback {
+    color: var(--color-white);
+    opacity: 0.5;
+}
+
+
+.titleStart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.titleStart p {
+    /* font-family: var(--ff-citations); */
+    color: var(--color-background);
+    max-width: 750px;
+    text-align: center;
+    margin-bottom: var(--space-xxl);
+}
+
+.titleStart>span {
+    font-size: var(--fs-middle);
+    margin-bottom: var(--space-s);
+    opacity: 0;
+    text-align: center;
+    line-height: var(--lh-middle);
+}
+
+.display-infoStart {
+    animation: 6s display05 linear infinite;
+}
+
+@keyframes display05 {
+
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+
+.buttonsStart {
+    visibility: hidden;
+    display: flex;
+    gap: var(--space-m);
+    align-items: center;
+}
+
+.titleStart>div {
+    text-align: center;
+    position: relative;
+    text-transform: uppercase;
+}
+
+.supertitleback {
+    font-size: var(--fs-titles);
+    line-height: var(--lh-titles);
+    font-family: monospace;
+}
+
+.supertitlefront {
+    z-index: 3;
+    color: var(--color-white);
+
+    position: absolute;
+    font-size: var(--fs-titles);
+    line-height: var(--lh-titles);
+    background-color: transparent;
+    font-family: monospace;
+    padding: 0;
+    margin: 0;
+    font-weight: 900;
+    text-transform: uppercase;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-shadow: 0 0 5px var(--color-white);
+}
+
+input:focus,
+textarea:focus {
+    outline: none;
+}
+
+.blinking-cursor {
+    color: var(--color-white) !important;
+    animation: 1s blink step-end infinite;
+    position: absolute;
+    font-size: var(--fs-titles);
+    line-height: var(--lh-titles);
+    transform: translate(-50%, -3px);
+}
+
+@keyframes blink {
+
+    from,
+    to {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+}
+
+
+
+
+.avant-propos {
+    max-width: 900px;
+    margin: 0 auto;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
 .avant-propos h1 {
     margin-bottom: var(--space-s);
-}
-
-.avant-propos div {
-    max-width: 600px;
-    margin: auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    padding: var(--space-xxl);
 }
 
 .avant-propos p {
@@ -363,13 +419,17 @@ section {
 }
 
 .avant-propos img {
-    width: 150%;
+    width: 100%;
     margin: auto;
-    margin-left: -25%;
 }
 
 .avant-propos a {
     margin-top: var(--space-xl);
+}
+
+.avant-propos button {
+    width: fit-content;
+    margin: auto;
 }
 
 
@@ -386,19 +446,13 @@ section {
 
 sup {
     height: 12px;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
     display: inline-flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    align-items: center;
+    justify-content: center;
     font-size: var(--fs-sup);
     text-indent: 0;
     background-color: transparent;
-    color: black;
+    color: var(--color-black);
     font-weight: 900;
 }
 
@@ -427,20 +481,18 @@ sup {
     border-radius: var(--border-s);
     border: 1px solid transparent;
     padding: var(--space-s);
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .footnote:hover {
-    border: 1px solid var(--color-borders);
-    cursor: context-menu;
+    border: 1px solid var(--color-secondary);
+    cursor: pointer;
 }
 
 
 
 .footnote:hover img {
-    -webkit-filter: grayscale(0);
-            filter: grayscale(0);
+    filter: grayscale(0);
 }
 
 .footnote span {
@@ -453,30 +505,62 @@ sup {
 
 .footnote img {
     width: 100%;
-    -webkit-filter: grayscale(1);
-            filter: grayscale(1);
+    filter: grayscale(1);
     max-height: 300px;
-    -o-object-fit: contain;
-       object-fit: contain;
+    object-fit: contain;
     padding-bottom: var(--space-s);
+}
+
+
+/******************* FULL IMES *******************/
+
+.footnote.fullFigure {
+    height: 100vh;
+    background-color: #000000d1;
+    position: fixed;
+    top: 0 !important;
+    left: 0;
+    width: 100vw;
+    z-index: 10001;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: var(--space-xxl);
+    box-shadow: inset 0 0 30px var(--color-black);
+    text-align: center;
+    backdrop-filter: blur(10px);
+    box-sizing: border-box;
+    border: none;
+}
+
+.footnote.fullFigure img {
+    max-height: 80%;
+    max-width: 80%;
+}
+
+.footnote.fullFigure span,
+.footnote.fullFigure sup {
+    font-size: var(--fs-normal) !important;
+    line-height: var(--lh-normal);
+    color: white;
 }
 
 /******************* HIGHLIGHT *******************/
 
 .highlight {
-    border: 1px solid var(--color-borders);
+    border: 1px solid var(--color-secondary);
 }
 
 .highlight img {
-    -webkit-filter: grayscale(0);
-            filter: grayscale(0);
+    filter: grayscale(0);
 }
 
 .highlight-text span {
-    background-color: yellow;
+    background-color: var(--color-highlight);
     border-radius: 5px;
-    /* color: var(--color-borders); */
-    /* border: 1px solid var(--color-borders); */
+    /* color: var(--color-secondary); */
+    /* border: 1px solid var(--color-secondary); */
 }
 
 /******************* PAGE SCROLLBAR *******************/
@@ -486,11 +570,8 @@ sup {
     position: fixed;
     left: 50%;
     top: 0;
-    -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
-    -webkit-box-shadow: 0px 0px 17px hsl(0deg 0% 0% / 20%);
-            box-shadow: 0px 0px 17px hsl(0deg 0% 0% / 20%);
+    transform: translateX(-50%);
+    box-shadow: 0px 0px 17px hsl(0deg 0% 0% / 20%);
 }
 
 .progressbar {
