--- a/memoire/assets/css/utility.css
+++ b/memoire/assets/css/utility.css
@@ -23,6 +23,10 @@
     display: none;
 }
 
+small {
+    font-size: var(--fs-sup);
+}
+
 .op50 {
     opacity: 0.5 !important;
 }
@@ -33,6 +37,7 @@ textarea {
     outline: none;
 
     -webkit-box-shadow: none;
+    -moz-box-shadow: none;
     box-shadow: none;
 
     resize: none;
@@ -44,13 +49,14 @@ textarea {
     position: absolute;
     display: none;
     z-index: 99;
-    background-color: var(--color-borders-light);
     border-radius: 999px;
     font-size: 10px;
     line-height: 2;
     padding: 0 5px;
-    border: 1px solid var(--color-borders);
+    border: 1px solid var(--color-secondary);
     margin-top: 5px;
+    background-color: var(--color-secondary);
+    color: var(--color-black);
 }
 
 #tooltip:hover {
