--- a/memoire/assets/css/variables.css
+++ b/memoire/assets/css/variables.css
@@ -36,10 +36,16 @@
     --trans-quick: all linear 0.2s;
     --trans-normal: all linear 0.4s;
 
-    --color-white-semi: #ffffff70;
-    --color-white: white;
-    --color-borders: #c4c2bc;
-    --color-borders-light: #e8e6e2;
 
-    --color-notes: darkorchid;
+    --color-white: white;
+    --color-black: black;
+
+    --color-secondary: #c4c2bc;
+    --color-secondary-light: #e8e6e2;
+
+    --color-notes: #22e32e;
+    --color-highlight: yellow;
+
+
+    --color-shadow: black;
 }
