--- a/memoire/assets/css/style.css
+++ b/memoire/assets/css/style.css
@@ -27,7 +27,7 @@ html::-webkit-scrollbar {
 
 body {
     font-family: var(--ff-text);
-    background-color: dodgerblue;
+    background-color: #3e3e3e;
     color: var(--color-black);
     margin: 0;
 
@@ -58,16 +58,24 @@ button a {
 
 button {
     border-radius: var(--border-m);
-    border: 1px solid var(--color-secondary-light);
-    background-color: #e8e6e291;
+    border: 1px dashed transparent;
+    background-color: transparent;
     padding: var(--space-s);
     transition: var(--trans-quick);
+    box-shadow: inset 0px 0 20px -10px var(--color-white);
+    color: var(--color-white);
+    text-transform: unset;
+    font-weight: 600;
 }
 
 button:hover {
     cursor: pointer;
-    background-color: var(--color-white);
+    background-color: #e8e6e291;
     transition: var(--trans-quick);
+    color: var(--color-black);
+    border: 1px dashed var(--color-secondary-light);
+
+
 }
 
 /******************* BOOK EFFECT *******************/
@@ -77,6 +85,10 @@ button:hover {
     margin: auto;
     /* background-color: red; */
     position: relative;
+    /* display: none; */
+    z-index: 10;
+    visibility: hidden;
+
 }
 
 /******************* PAGES *******************/
@@ -152,14 +164,12 @@ h1 {
     font-weight: 400;
     text-align: center;
     /* box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.5); */
-    border: 1px solid var(--color-black);
-    border-radius: 20px;
+    /*! border: 1px solid var(--color-black); */
+    border-radius: var(--border-l);
     padding: var(--space-s);
 
-    box-shadow: 0px 0 20px -10px var(--color-shadow);
-
-    word-break:break-all;
-
+    box-shadow: inset 0px 0 20px -10px black;
+    word-break: normal;
 }
 
 h2 {
@@ -232,11 +242,11 @@ section {
     align-items: center;
     justify-content: center;
     border-radius: 100%;
-    background-color: var(--color-black);
-    color: var(--color-white);
+    /*! background-color: var(--color-black); */
+    /*! color: var(--color-white); */
     line-height: initial;
-    border: 1px solid black;
-    box-shadow: 0px 0 20px -10px var(--color-shadow);
+    /*! border: 1px solid black; */
+    box-shadow: inset 0px 0 20px -10px black;
 }
 
 .titlesSticky {
@@ -257,6 +267,12 @@ section {
     font-size: var(--fs-normal);
     padding: 0;
     text-align: left;
+    box-shadow: none;
+}
+
+.titlesSticky>h1>span {
+    font-size: var(--fs-big);
+    font-family: var(--ff-text);
 }
 
 .titlesSticky h2 {
@@ -269,25 +285,25 @@ section {
 /******************* SOMMAIRE PARTIES *******************/
 .start {
     position: fixed;
-    z-index: 999;
-    width: 100vw;
+    z-index: 5;
     background-color: dodgerblue;
-    overflow-y: scroll;
-    overflow-x: hidden;
     box-sizing: border-box;
-    height: 100vh;
     padding: 0 var(--space-xxl);
-
-    /* display: none; */
+    overflow-y: scroll;
+    box-shadow: inset 0px 0 70px 0px var(--color-white);
+    height: calc(100vh - var(--space-m) * 2);
+    width: calc(100vw - var(--space-m) * 2);
+    border-radius: 50px;
+    margin: var(--space-m);
 }
 
-.avant-propos {
+.conseils {
     display: none;
 }
 
 .supertitleback {
     color: var(--color-white);
-    opacity: 0.5;
+    opacity: 0.3;
 }
 
 
@@ -304,7 +320,7 @@ section {
     color: var(--color-background);
     max-width: 750px;
     text-align: center;
-    margin-bottom: var(--space-xxl);
+    margin-bottom: 0;
 }
 
 .titleStart>span {
@@ -313,10 +329,24 @@ section {
     opacity: 0;
     text-align: center;
     line-height: var(--lh-middle);
+    margin: var(--space-l) 0 0 0;
+    color: white;
+}
+
+.titleStart p:nth-last-child(1) {
+    position: absolute;
+    bottom: var(--space-m);
+    font-size: var(--fs-small);
+    color: var(--color-white);
+    border-radius: var(--border-m);
+    /* border: 1px dashed var(--color-secondary-light); */
+    background-color: transparent;
+    padding: calc(var(--space-s)/1.5);
+    box-shadow: inset 0px 0 20px -10px var(--color-white);
 }
 
 .display-infoStart {
-    animation: 6s display05 linear infinite;
+    animation: 4s display05 ease-in-out infinite;
 }
 
 @keyframes display05 {
@@ -326,7 +356,7 @@ section {
     }
 
     50% {
-        opacity: 1;
+        opacity: .4;
     }
 
     100% {
@@ -337,7 +367,6 @@ section {
 
 .buttonsStart {
     visibility: hidden;
-    display: flex;
     gap: var(--space-m);
     align-items: center;
 }
@@ -385,7 +414,7 @@ textarea:focus {
     position: absolute;
     font-size: var(--fs-titles);
     line-height: var(--lh-titles);
-    transform: translate(-50%, -3px);
+    transform: translate(-70%, -3px);
 }
 
 @keyframes blink {
@@ -403,35 +432,34 @@ textarea:focus {
 
 
 
-.avant-propos {
+.conseils {
     max-width: 900px;
     margin: 0 auto;
     min-height: 100vh;
     flex-direction: column;
 }
 
-.avant-propos h1 {
+.conseils h2 {
     margin-bottom: var(--space-s);
+    padding: var(--space-xl) 0 0 0;
+    font-family: var(--ff-text);
 }
 
-.avant-propos p {
+.conseils p {
     text-indent: 0 !important;
+    font-size: var(--fs-middle);
+    line-height: var(--lh-middle);
 }
 
-.avant-propos img {
+.conseils img {
     width: 100%;
-    margin: auto;
+    margin: var(--space-xl) auto;
 }
 
-.avant-propos a {
-    margin-top: var(--space-xl);
-}
-
-.avant-propos button {
+.conseils a {
     width: fit-content;
-    margin: auto;
+    margin: var(--space-xl) auto;
 }
-
 
 /******************* CITATIONS *******************/
 .citation {
@@ -459,6 +487,8 @@ sup {
 .footnote sup {
     margin-right: 3px !important;
 }
+
+
 
 .footnote-anchor sup {
     margin-left: 3px !important;
@@ -537,13 +567,18 @@ sup {
 .footnote.fullFigure img {
     max-height: 80%;
     max-width: 80%;
+    filter: grayscale(0) !important;
 }
 
-.footnote.fullFigure span,
-.footnote.fullFigure sup {
+.footnote.fullFigure span {
     font-size: var(--fs-normal) !important;
     line-height: var(--lh-normal);
     color: white;
+}
+
+.footnote.fullFigure sup {
+    color: white;
+    font-size: var(--fs-small) !important;
 }
 
 /******************* HIGHLIGHT *******************/
