--- a/memoire/assets/css/utility.css
+++ b/memoire/assets/css/utility.css
@@ -23,8 +23,14 @@
     display: none;
 }
 
+.hiddenHard {
+    display: none !important;
+}
+
 small {
-    font-size: var(--fs-sup);
+    font-size: 8px;
+    transform: translate(-3px, -120%);
+    position: absolute;
 }
 
 .op50 {
@@ -50,17 +56,33 @@ textarea {
     display: none;
     z-index: 99;
     border-radius: 999px;
-    font-size: 10px;
-    line-height: 2;
+    font-size: var(--fs-small);
     padding: 0 5px;
-    border: 1px solid var(--color-secondary);
     margin-top: 5px;
-    background-color: var(--color-secondary);
+    background-color: var(--color-special-2);
     color: var(--color-black);
+    box-shadow: 0 0 10px 0 var(--color-special-2);
 }
 
-#tooltip:hover {
+
+#tooltip span {
     cursor: pointer;
+    background-color: var(--color-secondary-light);
+    color: black;
+    opacity: .6;
+    height: 18px;
+    width: 18px;
+    position: relative;
+    align-content: center;
+    align-items: center;
+    display: inline-flex;
+    justify-content: center;
+    border-radius: 100%;
+    margin-left: 0px;
+}
+
+#tooltip span:hover {
+    opacity: 1;
 }
 
 #cal1 {
@@ -81,4 +103,31 @@ textarea {
     left: 0px;
     overflow: none;
     z-index: -100;
+}
+
+.buttonsStart {
+    visibility: hidden;
+    display: none;
+    opacity: 0;
+}
+
+.appear {
+    animation: appear 2s ease-in forwards;
+}
+
+@keyframes appear {
+    0% {
+        visibility: hidden;
+        opacity: 0;
+    }
+
+    1% {
+        visibility: visible;
+    }
+
+    100% {
+        visibility: visible;
+        opacity: 1;
+
+    }
 }
