--- a/memoire/assets/css/mobile.css
+++ b/memoire/assets/css/mobile.css
@@ -1,6 +1,6 @@
 @media screen and (max-width : 1200px) {
     h1 {
-        word-break: break-all;
+        /* word-break: break-all; */
     }
 }
 
@@ -21,7 +21,7 @@
     }
 
     h1 {
-        word-break: break-all;
+        /* word-break: break-all; */
     }
 
     .header {
