--- a/memoire/assets/css/options.css
+++ b/memoire/assets/css/options.css
@@ -210,7 +210,9 @@
   display: none;
 }
 
-.sommaireButtonOn {}
+.sommaireButtonOn {
+  justify-content: center;
+}
 
 .sommaireButtonOn:hover span {}
 
@@ -262,18 +264,20 @@
 
 .sommairePage div {
   border-radius: var(--border-m);
-  border: 1px dashed var(--color-secondary-light);
+  border: 1px dashed var(--color-black);
   background-color: transparent;
   padding: var(--space-s);
   margin: var(--space-m) 0;
   transition: var(--trans-quick);
-  box-shadow: inset 0px 0 20px -10px var(--color-white);
+  /* box-shadow: inset 0px 0 20px -10px var(--color-white); */
   color: var(--color-black);
   text-transform: unset;
 }
 
 .sommairePage div:hover {
   cursor: pointer;
+  /* border: 1px dashed var(--color-secondary-light); */
+
   background-color: #e8e6e291;
   transition: var(--trans-quick);
 }
@@ -363,7 +367,7 @@
   border-radius: 999px;
   display: flex;
   align-items: center;
-
+  background-color: white;
 }
 
 .notesCopy {
@@ -487,7 +491,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   aspect-ratio: 3/2;
-  color: white;
+  color: var(--color-black);
 }
